tests/paczka1/small_fuzzy/91713205.err
Error in line 2: QumoHbMb7r S516 98,4
Error in line 9: QumoHbMb7r A362 23,9
Error in line 14: vY3hig5TyM A412 74,6
